@@ -1,3 +1,10 @@
+2007-02-08  Vitaly Alexeev <tishka92@yahoo.com>
+
+	* gameswf/gameswf_test_ogl.cpp: added the support of multi-file games
+	* gameswf/gameswf_sound_handler.h: typo
+	* gameswf/gameswf_impl.cpp: fixed the bug being
+	the reason of an infinite cycle
+	
 2007-02-07  Vitaly Alexeev <tishka92@yahoo.com>
 
 	* gameswf/gameswf_test_ogl.cpp: display of the gameswf_logo and process of loading
